--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,8 +1,8 @@
-home = C:\Users\izabe\AppData\Local\Programs\Python\Python311
+home = C:\Users\izabe\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
 implementation = CPython
 version_info = 3.11.1.final.0
 virtualenv = 20.13.0
 include-system-site-packages = false
-base-prefix = C:\Users\izabe\AppData\Local\Programs\Python\Python311
-base-exec-prefix = C:\Users\izabe\AppData\Local\Programs\Python\Python311
-base-executable = C:\Users\izabe\AppData\Local\Programs\Python\Python311\python.exe
+version = 3.11.1
+executable = C:\Users\izabe\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe
+command = C:\Users\izabe\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe -m venv --without-pip C:\Users\izabe\PycharmProjects\aplicacoes-web-responsivas-com-django-e-bootstrap
